--- a/.github/workflows/pythonsdk.yml
+++ b/.github/workflows/pythonsdk.yml
@@ -8,13 +8,14 @@ jobs:
     runs-on: self-hosted
     container: vmcswaggers-docker-local.artifactory.eng.vmware.com/vsphere-python-testing:1.2
     steps:
-    - env: 
-        NIMBUS_TESTBED: vapi-testbeds.eng.vmware.com
-        VC_PASSWORD: Admin!23
-        VC_USER_NAME: administrator
-        VC_VERSION: 67u3
-        VC_VERSION_MAIN: main
-    - name: Install dependencies
-    - run: |
+      - env: 
+           NIMBUS_TESTBED: vapi-testbeds.eng.vmware.com
+           VC_PASSWORD: Admin!23
+           VC_USER_NAME: administrator
+           VC_VERSION: 67u3
+           VC_VERSION_MAIN: main
+      - name: Install dependencies
+      - run: |
           echo "Running smoke test"
           bash test/smoke-test.sh -u $VC_USER_NAME -p $VC_PASSWORD
+        name: Run smoke test
