--- a/.github/workflows/pythonsdk.yml
+++ b/.github/workflows/pythonsdk.yml
@@ -15,4 +15,4 @@ jobs:
            VC_VERSION_MAIN: main
         run: |
           echo "Running smoke test"
-          bash test/smoke-test.sh -u $VC_USER_NAME -p $VC_PASSWORD
+          bash tests/smoke-test.sh -u $VC_USER_NAME -p $VC_PASSWORD
