--- a/.github/workflows/pythonsdk.yml
+++ b/.github/workflows/pythonsdk.yml
@@ -7,12 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        env: 
-           NIMBUS_TESTBED: ${{ secrets.NIMBUS_TESTBED }}
-           VC_PASSWORD: ${{ secrets.VM_PASSWORD }}
-           VC_USER_NAME: ${{ secrets.VC_USER_NAME }}
-           VC_VERSION: ${{ secrets.VC_VERSION }}
-           VC_VERSION_MAIN: ${{ secrets.VC_VERSION_MAIN }}
         run: |
           echo "Running smoke test"
-          bash tests/smoke-test.sh -u $VC_USER_NAME -p $VC_PASSWORD
+          bash tests/smoke-test.sh -u ${{ secrets.VC_USER_NAME }} -p ${{ secrets.VM_PASSWORD }}
