--- a/.github/workflows/pythonsdk.yml
+++ b/.github/workflows/pythonsdk.yml
@@ -7,6 +7,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
+        env: 
+           NIMBUS_TESTBED: ${{ secrets.nimbus_testbed }}
+           VC_PASSWORD: ${{ secrets.vc_password }}
+           VC_USER_NAME: ${{ secrets.vc_user_name }}
+           VC_VERSION: ${{ secrets.vc_version }}
         run: |
           echo "Running smoke test"
-          bash tests/smoke-test.sh -u ${{ secrets.VC_USER_NAME }} -p ${{ secrets.VM_PASSWORD }}
+          bash tests/smoke-test.sh -u $VC_USER_NAME -p $VM_PASSWORD
